--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Ganhe Seguidores - Ganhe seguidores grátis!</title>
+    <title>Ganhe Seguidores - Ganhe seguidores grátis no Instagram!</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+
+    <meta name="title" content="Ganhe Seguidores - Ganhe seguidores grátis no Instagram!">
+    <meta name="description" content="Ganhe seguidores ou curtidas gratuitas no Instagram. Ferramenta gratuita para que você impulsione quantas contas você quiser! Totalmente grátis. Não precisamos da senha do Instagram para utilização do site. Crie sua conta e comece a promover suas contas do Instagram.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ganheseguidores.com/">
+    <meta property="og:title" content="Ganhe Seguidores - Ganhe seguidores grátis no Instagram!">
+    <meta property="og:description" content="Ganhe seguidores ou curtidas gratuitas no Instagram. Ferramenta gratuita para que você impulsione quantas contas você quiser! Totalmente grátis. Não precisamos da senha do Instagram para utilização do site. Crie sua conta e comece a promover suas contas do Instagram.">
+    <meta property="og:image" content="https://i.imgur.com/Ml0JOcN.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://ganheseguidores.com/">
+    <meta property="twitter:title" content="Ganhe Seguidores - Ganhe seguidores grátis no Instagram!">
+    <meta property="twitter:description" content="Ganhe seguidores ou curtidas gratuitas no Instagram. Ferramenta gratuita para que você impulsione quantas contas você quiser! Totalmente grátis. Não precisamos da senha do Instagram para utilização do site. Crie sua conta e comece a promover suas contas do Instagram.">
+    <meta property="twitter:image" content="https://i.imgur.com/Ml0JOcN.png">
   </head>
   <body>
     <noscript>
