Alteração no sitemap e metatags

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,16 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
 
     <meta name="title" content="Ganhe Seguidores - Ganhe seguidores grátis no Instagram!">
-    <meta name="description" content="Ganhe seguidores ou curtidas gratuitas no Instagram. Ferramenta gratuita para que você impulsione quantas contas você quiser! Totalmente grátis. Não precisamos da senha do Instagram para utilização do site. Crie sua conta e comece a promover suas contas do Instagram.">
+    <meta name="description" content="Ganhe seguidores ou curtidas gratuitas no Instagram. Ferramenta gratuita para que você impulsione quantas contas você quiser! Totalmente grátis. Não precisamos da senha do Instagram para utilização do site. Crie sua conta e comece a promover suas contas do Instagram. Melhor site do Brasil, para conseguir likes e seguidores sem senha do Instagram!">
+    <meta name="keywords" content="ganhar seguidores instagram, ganhar seguidores no instagram, ganhar seguidores, ganhar curtidas instagram, ganhar curtidas, ganhar likes, ganhar likes instagram, curtidas de graça, curtidas gratis, seguidores grátis, seguidores de graça, ganhe seguidores instagram, ganhe seguidores, ganhe curtidas, ganhe curtidas instagram, ganhe seguidores, uparseguidores, likesforinsta, gramlikes, instelikes, instacurtidas">
+    <link rel="alternate" href="https://www.ganheseguidores.com/" hreflang="pt-br" />
+    <meta name="author" content="GanheSeguidores">
+    <link rel="canonical" href="https://www.ganheseguidores.com/" />
+    <meta name="distribution" content="global" />
+    <meta name="rating" content="general" />
+    <meta name="expires" content="0"/>
+    <meta name="googlebot" content="all,follow"/>
+    <meta name="audience" content="all"/>
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
