--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,8 @@
     <meta property="twitter:title" content="Ganhe Seguidores - Ganhe seguidores grátis no Instagram!">
     <meta property="twitter:description" content="Ganhe seguidores ou curtidas gratuitas no Instagram. Ferramenta gratuita para que você impulsione quantas contas você quiser! Totalmente grátis. Não precisamos da senha do Instagram para utilização do site. Crie sua conta e comece a promover suas contas do Instagram.">
     <meta property="twitter:image" content="https://i.imgur.com/Ml0JOcN.png">
+
+    <script data-ad-client="ca-pub-9217694463543013" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
   <body>
     <noscript>
